# FlowDesk

./: .gitignore  README.md  new_lead_to_sheets.json  pyproject.toml
backend/fastapi_app/: config.py  main.py  models.py
backend/fastapi_app/templates/: lead_form.html  lead_success.html
bot/flowdesk_bot/: config.py  main.py
n8n_workflows/: new_lead_to_sheets.json  weekly_leads_report.json
